hphp/hack/test/decl/autoimport_namespaces.php
<?hh

type RxException = Rx\Exception;

type BackslashRxException = \Rx\Exception;

type RxRxException = RxRx\Exception;

type MyRx = Rx;
